@@ -1,5 +1,6 @@
 v0.1.9
 - small docfix change in XMLReader
+- use REXML::Formatters::Default instead of deprecated REXML::Element.write
 
 v0.1.8 Tue Nov 13 22:51:03 EST 2007
 - added examples directory
